--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label "Recipe Title" %> <br />
+  <%= f.text_field :title %> <br /><br />
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %><br />
+    <%= ingredient.text_field :name %><br><br />
+ 
+    <%= ingredient.label :quantity %><br />
+    <%= ingredient.text_field :quantity %><br><br />
+    <% end %>
+
+  <%= f.submit %>
+<% end %>
